# Kurs_01

./: .env_template  .flake8  README.md  config.py  pyproject.toml
src/: logger.py  main.py  reports.py  services.py  utils.py  views.py
tests/: conftest.py  test_reports.py  test_services.py  test_utils.py  test_views.py
